--- a/project/package.json
+++ b/project/package.json
@@ -12,6 +12,7 @@
     "@indielayer/vue-live-demo": "^1.0.0",
     "animate.css": "^4.1.0",
     "apexcharts": "^3.19.2",
+    "axios": "^0.21.0",
     "echarts": "^4.8.0",
     "flag-icon-css": "^3.4.6",
     "lodash": "^4.17.15",
@@ -26,6 +27,7 @@
     "vue-gtag": "^1.8.0",
     "vue-head": "^2.2.0",
     "vue-i18n": "^8.18.1",
+    "vue-plugin-axios": "^1.0.14",
     "vue-router": "^3.2.0",
     "vue-shortkey": "^3.1.7",
     "vue2-google-maps": "^0.10.7",
